--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
-body {
+html, body, #root {
+  padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +14,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ant-layout {
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
