--- a/src/pages/searchList/index.less
+++ b/src/pages/searchList/index.less
@@ -3,7 +3,7 @@
     .ant-list {
       .ant-row {
         > div {
-          //flex: 1 1 auto;
+          flex: 1 1 auto;
         }
       }
     }
@@ -27,5 +27,19 @@
         margin: 0;
       }
     }
+  }
+
+  .card-content-title {
+    height: 50px;
+    overflow: hidden;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+
+  .card-content {
+    border-top: 1px dashed #ccc;
+    padding-top: 10px;
+    text-indent: 26px;
   }
 }
