--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -3,6 +3,7 @@
     height: 45px;
     line-height: 45px;
   }
+
   .headerWrap {
     height: 45px;
     overflow: hidden;
@@ -16,6 +17,10 @@
     .rightWrap {
       float: right;
       color: white;
+
+      .themeSwitch[aria-checked="false"] {
+        background: #ccc;
+      }
 
       .user {
         padding: 0 10px;
