--- a/src/pages/accountSetting/index.less
+++ b/src/pages/accountSetting/index.less
@@ -1,20 +1,12 @@
 .settingWrap {
   width: 100%;
   display: flex;
-  padding: 20px 0;
-  .ant-menu {
+  margin: 20px 0;
+  .custom-default-menu, .custom-dark-menu {
     width: 220px;
-    border-right: 1px solid #f0f0f0;
   }
   .rightContent {
     flex: 1 1 auto;
-    padding: 8px 40px;
-
-    .baseTitle {
-      font-size: 20px;
-      font-weight: 500;
-      margin-bottom: 20px;
-    }
 
     .baseContent {
       display: flex;
