--- a/src/pages/dashboard/index.less
+++ b/src/pages/dashboard/index.less
@@ -10,12 +10,12 @@
       div {
         display: inline-block;
 
-        &:last-child {
-          margin-left: 18px;
+        &:first-child {
+          margin-right: 18px;
         }
 
         span:nth-of-type(2) {
-          margin: 0 10px;
+          margin: 0 12px;
         }
       }
     }
